src/gtk/style.css
@define-color dimmed_color alpha(currentColor, .55);

button.large {
  min-width: 48px;
  min-height: 48px;
}

.main-box {
  padding: 6px;
  margin-left: 24px;
  margin-right: 24px;
}

songdetails {
  padding-bottom: 24px;
}

songdetails label.song-title {
  /* match title-1 */
  font-size: 15pt;
  font-weight: 800;
  padding-left: 12px;
  padding-right: 12px;
}

picture.cover {
  min-width: 128px;
  min-height: 128px;
  box-shadow: 0px 1px 4px rgba(0,0,0,0.5),
              0px 2px 8px rgba(0,0,0,0.3);
  border-radius: 6px;
  margin: 6px;
}

.main-window songdetails picture.cover {
  background: linear-gradient(to bottom, @background_color_0, @background_color_1);
}

waveformview {
  padding-bottom: 6px;
  opacity: 0.55;
  transition-property: opacity;
  transition-duration: 100ms;
  transition-timing-function: ease;
}

waveformview:hover {
  opacity: 1.0;
}

queuerow .currently-playing {
  padding-left: 6px;
  font-weight: 700;
}

queuerow box.song-details {
  padding: 6px 0;
  border-spacing: 12px;
}

queuerow label.song-title {
  font-weight: 700;
  font-size: 85%;
}

queuerow label.song-artist {
  font-size: 85%;
}

queuerow picture.cover {
  min-width: 48px;
  min-height: 48px;
  box-shadow: initial;
  border-radius: 2px;
  margin: 0px;
}

queuerow checkbutton.selection-mode {
  padding-right: 12px;
  padding-left: 8px;
}

.queue-length {
  padding-top: 12px;
  padding-left: 12px;
}

dragoverlay {
  box-shadow: none;
}

.drag-overlay-status-page {
  background-color: alpha(@accent_bg_color, 0.5);
  color: @accent_fg_color;
}

scrolledwindow undershoot.top {
  box-shadow: inset 0 1px @borders;
}

.main-window {
  background: linear-gradient(127deg, alpha(@background_color_0, .55), alpha(@background_color_0, 0) 70.71%),
              linear-gradient(217deg, alpha(@background_color_1, .55), alpha(@background_color_1, 0) 70.71%),
              linear-gradient(336deg, alpha(@background_color_2, .55), alpha(@background_color_2, 0) 70.71%);
  transition-property: background;
  transition-duration: 250ms;
  transition-timing-function: ease;
}

.main-window .unfolded .darken {
  background-color: rgba(0, 0, 0, 0.08);
}

.folded playlistview {
  background: @window_bg_color;
}


.main-window button:focus,
.main-window row:focus {
  outline-color: alpha(currentColor, .25);
}

